2018-02-25         Arnold D. Robbins     <arnold@skeeve.com>

	* 4.2.1: Release tar ball made.

2018-02-25         Arnold D. Robbins     <arnold@skeeve.com>

	* config.guess, config.sub: Updated.

2018-02-23         Arnold D. Robbins     <arnold@skeeve.com>

	* configure.ac: Restore checking for PPC Macintosh before
	checking for MPFR. See README_d/README.macosx for info.

2018-02-21         Arnold D. Robbins     <arnold@skeeve.com>

	* configure.ac: Remove checking for PPC Macintosh before
	checking for MPFR. Installing a newer compiler on that
	system allows things to work.

2018-02-19         Arnold D. Robbins     <arnold@skeeve.com>

	* gawkapi.h, io.c, msg.c: Update copyright year.

2018-02-10         Arnold D. Robbins     <arnold@skeeve.com>

	* main.c, msg.c: Add a call to fflush(NULL) before each call
	to abort(), since GLIBC 2.27 doesn't necessarily flush before
	aborting.  Thanks to Nelson H.F. Beebe for the report.

2018-02-09         Arnold D. Robbins     <arnold@skeeve.com>

	* io.c (socketopen): Rearrange assigning the flags to use
	AI_ADDRCONFIG only if family is AF_UNSPEC. Thanks to
	Houder <houder@xs4all.nl> for the report and initial
	code suggestion.

2018-02-07         Andrew J. Schorr      <aschorr@telemetry-investments.com>

	Print +"01" should print "1", not "01".
	* interpret.h (Op_unary_plus): Need to make a new number node that does
	not contain the original string representation. The logic is copied
	from Op_unary_minus.
	* mpfr.c (mpg_interpret): Add new case for Op_unary_plus based on
	the Op_unary_minus logic. We need a fresh number node that does not
	contain the string.

2018-01-28         Arnold D. Robbins     <arnold@skeeve.com>

	* config.guess, config.sub: Updated.

2018-01-25         Arnold D. Robbins     <arnold@skeeve.com>

	* main.c (main): Add explanatory comment about O_APPEND stuff.
	* NEWS: Updated.

2018-01-22         Arnold D. Robbins     <arnold@skeeve.com>

	Fix the inplace tests on *BSD systems.
