@@ -3535,12 +3535,12 @@ rs1scan(IOBUF *iop, struct recmatch *recm, SCANSTATE *state)
 	/* Thus, the check for \n here; big speedup ! */
 	if (rs != '\n' && gawk_mb_cur_max > 1) {
 		int len = iop->dataend - bp;
-		int found = 0;
+		bool found = false;
 
 		memset(& mbs, 0, sizeof(mbstate_t));
 		do {
 			if (*bp == rs)
-				found = 1;
+				found = true;
 			if (is_valid_character(*bp))
 				mbclen = 1;
 			else
