@@ -1,3 +1,10 @@
+2018-03-05         Arnold D. Robbins     <arnold@skeeve.com>
+
+	* awk.h [PUSH_BINDING, POP_BINDING]: Moved to ...
+	* debug.c: here.
+	* awkgram.y (yylex): Make do_etoa_init into a boolean.
+	* io.c (rs1scan): Make found into a boolean.
+
 2018-02-25         Arnold D. Robbins     <arnold@skeeve.com>
 
 	* 4.2.1: Release tar ball made.
